--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple chat app with NodeJS and SocketIO",
   "main": "server.js",
   "scripts": {
-    "start":"node server.js",
+    "start": "node server.js",
     "serve": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,6 +14,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongoose": "^5.12.8",
+    "mongose": "0.0.2-security",
     "pug": "^3.0.2",
     "socket.io": "^4.0.2"
   },
